--- a/client/src/app/page/signup/signup.component.html
+++ b/client/src/app/page/signup/signup.component.html
@@ -1,8 +1,23 @@
 <div class="login-container">
   <mat-card>
-    <mat-card-title>Log In&nbsp;<mat-icon>lock</mat-icon></mat-card-title>
+    <mat-card-title>Sign Up&nbsp;<mat-icon>lock_open</mat-icon></mat-card-title>
     <mat-card-content>
       <div class="field-container">
+        <mat-form-field appearance="outline">
+          <mat-label>Enter your name</mat-label>
+          <input
+            matInput
+            placeholder="john_doe"
+            [formControl]="name"
+            (blur)="updateErrorMessage()"
+            required
+          />
+          <mat-icon matSuffix>add_reaction</mat-icon>
+          @if (name.invalid) {
+          <mat-error>{{ errorMessageName() }}</mat-error>
+          }
+        </mat-form-field>
+
         <mat-form-field appearance="outline">
           <mat-label>Enter your email</mat-label>
           <input
@@ -46,21 +61,18 @@
       <button
         mat-raised-button
         color="primary"
-        (click)="login()"
-        [disabled]="loginBtnDis()"
+        (click)="signup()"
+        [disabled]="signupBtnDis()"
         class="login-button"
       >
-        <mat-icon class="login-mat-icon">login</mat-icon>
-        &nbsp;Login
+        <mat-icon class="login-mat-icon">download</mat-icon>
+        &nbsp;Signup
       </button>
     </mat-card-content>
     <mat-card-footer>
       <div class="additional-options">
-        <button mat-button (click)="openDialog()" class="forgot-password">
-          Forgot password?
-        </button>
-        <button mat-button class="sign-up" (click)="toSignup()">
-          Want to sign up?
+        <button mat-button class="sign-up" (click)="toLogin()">
+          Already have account, Login?
         </button>
       </div>
     </mat-card-footer>
