--- a/client/src/app/page/home/home.component.html
+++ b/client/src/app/page/home/home.component.html
@@ -1,3 +1,7 @@
+<header class="header">
+  gitCraft
+  </header>
+  
 <mat-stepper class="stepper">
   <mat-step label="Community">
     <ng-template matStepLabel>
