--- a/client/src/app/page/signup/signup.component.html
+++ b/client/src/app/page/signup/signup.component.html
@@ -66,13 +66,13 @@
         class="login-button"
       >
         <mat-icon class="login-mat-icon">download</mat-icon>
-        &nbsp;Signup
+        &nbsp;Sign Up!
       </button>
     </mat-card-content>
     <mat-card-footer>
-      <div class="additional-options">
+      <div class="additional-options"> Already have an account?
         <button mat-button class="sign-up" (click)="toLogin()">
-          Already have account, Login?
+          LOGIN
         </button>
       </div>
     </mat-card-footer>
