--- a/client/src/app/page/home/home.component.css
+++ b/client/src/app/page/home/home.component.css
@@ -1,3 +1,21 @@
+/* Header styles */
+.header{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  height: 10%;
+  font-size:80px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-bottom: 20px;
+  margin-top:20px;
+  color:#333;
+  }
+
+  .logoLarge{
+    margin:10px;
+    width:100%;
+  }
+
 /* Stepper Styles */
 .stepper {
   margin: 16px;
